--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.4.5",
+    "react-pdf": "^7.6.0",
     "react-router-dom": "^6.14.2",
     "react-select": "^5.7.7",
     "react-toastify": "^9.1.3",
