--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@web5/api": "^0.8.3",
+    "@web5/credentials": "^0.4.1",
+    "@web5/dids": "^0.2.4",
     "apexcharts": "^3.41.0",
     "axios": "^1.5.0",
     "crypto-browserify": "^3.12.0",
